--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,6 @@
 extends layout
 
 block content
-  h1= Books
-  p 
+  h1= title
+  p Welcome to #{title}
     a.button(href='/books/new') Create New Book
