--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,21 @@
-extends layout
+extends layout.jade
 
 block content
   h1= title
-  p Welcome to #{title}
+  p 
     a.button(href='/books/new') Create New Book
+  table
+    thead
+      tr
+        th title
+        th Author 
+        th Genre
+        th Year 
+    tbody 
+      each in book in books 
+        tr 
+          td 
+            a(href=`/books/${book.id}`)= book.title 
+          td= book.author
+          td= book.genre
+          td= book.year
