--- a/views/index.jade
+++ b/views/index.jade
@@ -12,10 +12,10 @@ block content
         th Genre
         th Year 
     tbody 
-      each in book in books 
+      each book in books 
         tr 
           td 
-            a(href=`/books/${book.id}`)= book.title 
+            a(href=`/books/${Book}`)= book.title 
           td= book.author
           td= book.genre
           td= book.year
