--- a/views/new-book.jade
+++ b/views/new-book.jade
@@ -9,7 +9,7 @@ block content
             each error in errors 
                 li= error.message
     //- initialize the form
-    form(action="/books/new", method="post")
+    form(method="post")
         p
         label(for='title') Title
         input#title(name='title', type='text')
