--- a/views/update-book.jade
+++ b/views/update-book.jade
@@ -5,21 +5,22 @@ block content
     h1 Update Book
     form( action='/books/' + book.id method='post' )
         p
-            label(for='title') Title
-            input#title(name='title', type='text', value=book.title)
+            label( for='title' ) Title
+            input( type='text', name='title', id="title" value=book.title )
         p
-            label(for='author') Author
-            input#author(name='author', type='text', value=book.author)
+            label( for='author' ) Author
+            input( type='text', name='author', id= "author" value=book.author )
         p
-            label(for='genre') Genre
-            input#genre(name='genre', type='text', value=book.genre)
+            label( for='genre' ) Genre
+            input( type='text', name='genre', id= "genre" value=book.genre )
         p
-            label(for='year') Year
-            input#year(name='year', type='text', value=book.year)
+            label( for='year' ) Year
+            input( type='text', name='year', id= "year" value=book.year )
         p
-            input(type='submit', value='Update Book')
-    form(method='post', action='/books/' + book.id + '/delete' onsubmit="return confirm('Do you really want to delete this book?');") 
+            input( type='submit', value='Update Book' )
+
+    form( method='post', action='/books/' + book.id + '/delete' onsubmit="return confirm('Do you really want to delete this book?');" ) 
       p
-        a.button(href='/') Cancel
+        a.button( href='/' ) Cancel
       p
-        input(type='submit', value='Delete Book')
+        input( type='submit', value='Delete Book' )
